--- a/app/_locales/ja/messages.json
+++ b/app/_locales/ja/messages.json
@@ -5609,7 +5609,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "いつでもすぐに専任のサポートを受けられます"
+    "message": "いつでもすぐに専任のサポートを受けられます",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "優先サポート"
