--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -5609,7 +5609,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Nutzen Sie jederzeit einen schnelleren, engagierten Support"
+    "message": "Nutzen Sie jederzeit einen schnelleren, engagierten Support",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Prioritärer Support"
