--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -5609,7 +5609,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Accede a soporte más rápido y dedicado en cualquier momento"
+    "message": "Accede a soporte más rápido y dedicado en cualquier momento",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Soporte prioritario"
