--- a/app/_locales/fr/messages.json
+++ b/app/_locales/fr/messages.json
@@ -5609,7 +5609,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Bénéficiez d’une assistance dédiée plus rapide à tout moment"
+    "message": "Bénéficiez d’une assistance dédiée plus rapide à tout moment",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Assistance prioritaire"
