--- a/app/_locales/id/messages.json
+++ b/app/_locales/id/messages.json
@@ -5609,7 +5609,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Dapatkan dukungan khusus yang lebih cepat setiap saat"
+    "message": "Dapatkan dukungan khusus yang lebih cepat setiap saat",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Dukungan prioritas"
