--- a/app/_locales/ko/messages.json
+++ b/app/_locales/ko/messages.json
@@ -5609,7 +5609,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "언제든지 신속히 전담 지원을 받으세요"
+    "message": "언제든지 신속히 전담 지원을 받으세요",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "우선 지원"
