--- a/app/_locales/tl/messages.json
+++ b/app/_locales/tl/messages.json
@@ -5609,7 +5609,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Tumanggap ng mas mabilis at dedikadong suporta anumang oras"
+    "message": "Tumanggap ng mas mabilis at dedikadong suporta anumang oras",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Suporta para sa priority"
