--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -5609,7 +5609,8 @@
     "description": "The $1 is the date subscription ends"
   },
   "shieldTxDetails2Description": {
-    "message": "Her zaman daha hızlı, özel destek alın"
+    "message": "Her zaman daha hızlı, özel destek alın",
+    "description": "The $1 is interval and the $2 is the date of next billing"
   },
   "shieldTxDetails2Title": {
     "message": "Öncelikli destek"
