--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -6292,6 +6292,9 @@
   "shieldFooterAgreement": {
     "message": "By continuing, I agree to Transaction Shield $1."
   },
+  "shieldManagePlan": {
+    "message": "Manage plan"
+  },
   "shieldNotCovered": {
     "message": "Not covered"
   },
