feat: Updated forgot password flow (#37727)
<!--
Please submit this PR as a draft initially.
Do not mark it as "Ready for review" until the template has been
completely filled out, and PR status checks have passed at least once.
-->

## **Description**

<!--
Write a short description of the changes included in this pull request,
also include relevant motivation and context. Have in mind the following
questions:
1. What is the reason for the change?
2. What is the improvement/solution?
-->

[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/37727?quickstart=1)

In this PR, I've enhanced the UI for the 'Forgot Password Modal' and the
wallet import section and create new password in the Forgot Password
process.

Jira Link:
- https://consensyssoftware.atlassian.net/browse/SL-248
- https://consensyssoftware.atlassian.net/browse/SL-249
- https://consensyssoftware.atlassian.net/browse/SL-250

Figma Link:
https://www.figma.com/design/pViOUcmjwhEzFsdrwknpNc/Onboarding?node-id=14577-132967&m=dev

Note:

https://github.com/MetaMask/metamask-extension/pull/16156/files

We removed the above changes because when a user creates a wallet, we
dispatch the `setCompleteOnboarding` action, which sets
`completeOnboarding` to `true`. Since we already check this state in
`onboardingFlowSwitch` to handle navigation accordingly, we no longer
need to repeat this check for `restoreVault`.

cc: @chaitanyapotti @lwin-kyaw @lionellbriones 

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-Facing, please write a short User-Facing
description in the past tense like:
`CHANGELOG entry: Added a new tab for users to see their NFTs`
`CHANGELOG entry: Fixed a bug that was causing some NFTs to flicker`

(This helps the Release Engineer do their job more quickly and
accur

--- a/app/_locales/el/messages.json
+++ b/app/_locales/el/messages.json
@@ -2559,11 +2559,12 @@
     "message": "Ξεχάσατε τον κωδικό πρόσβασης;"
   },
   "forgotPasswordSocialDescription": {
-    "message": "Το MetaMask δεν μπορεί να ανακτήσει τον κωδικό πρόσβασής σας για εσάς."
+    "message": "Το MetaMask δεν μπορεί να ανακτήσει τον κωδικό πρόσβασής σας για εσάς.",
+    "description": "$1 is the support link"
   },
   "forgotPasswordSocialStep1": {
     "message": "Αν είστε συνδεδεμένοι στο MetaMask σε μια συσκευή με $1 (όπως Face ID), μπορείτε να επαναφέρετε τον κωδικό πρόσβασής σας από εκεί.",
-    "description": "$1 is bold biometrics turned on"
+    "description": "$1 is bold heading"
   },
   "forgotPasswordSocialStep1Biometrics": {
     "message": "ενεργοποιημένα βιομετρικά στοιχεία"
@@ -4920,12 +4921,6 @@
   "rateIncludesMMFee": {
     "message": "Περιλαμβάνει προμήθεια $1% στο MM."
   },
-  "reAddAccounts": {
-    "message": "προσθέστε εκ νέου οποιουσδήποτε άλλους λογαριασμούς"
-  },
-  "reAdded": {
-    "message": "προστέθηκαν εκ νέου"
-  },
   "readdToken": {
     "message": "Μπορείτε να προσθέσετε ξανά αυτό το token στο μέλλον επιλέγοντας \"Εισαγωγή token\" στο μενού επιλογών των λογαριασμών σας."
   },
@@ -5082,33 +5077,6 @@
   },
   "resetWallet": {
     "message": "Επαναφορά του πορτοφολιού σας"
-  },
-  "resetWalletSubHeader": {
-    "message": "Το MetaMask δεν κρατά αντίγραφο του κωδικού πρόσβασής σας. Εάν δεν μπορείτε να ξεκλειδώσετε τον λογαριασμό σας, θα πρέπει να επαναφέρετε το πορτοφόλι σας. Μπορείτε να το κάνετε με το να εισαγάγετε την Μυστική Φράση Ανάκτησής σας, την οποία χρησιμοποιήσατε όταν δημιουργήσατε το πορτοφόλι σας."
-  },
-  "resetWalletSubHeaderSocial": {
-    "message": "Το MetaMask δεν διατηρεί αντίγραφο του κωδικού πρόσβασής σας. Εάν δεν μπορείτε να ξεκλειδώσετε τον λογαριασμό σας, θα πρέπει να επαναφέρετε το πορτοφόλι σας. Αν έχετε την Μυστική Φράση Ανάκτησης, μπορείτε να τη χρησιμοποιήσετε για να διαγράψετε το τρέχον πορτοφόλι από αυτήν τη συσκευή, μαζί με τη λίστα των λογαριασμών σας."
-  },
-  "resetWalletUsingSRP": {
-    "message": "Αυτή η ενέργεια θα διαγράψει το τρέχον πορτοφόλι σας και την Μυστική Φράση Ανάκτησής σας από αυτή τη συσκευή μαζί με τη λίστα λογαριασμών που χειρίζεστε. Αφού κάνετε επαναφορά με την Μυστική Φράση Ανάκτησής σας, θα δείτε μια λίστα με λογαριασμούς με βάση τη Μυστική Φράση Ανάκτησης που χρησιμοποιήσατε για την επαναφορά. Αυτή η νέα λίστα θα περιλαμβάνει αυτόματα λογαριασμούς που έχουν κάποιο υπόλοιπο. Θα μπορείτε επίσης να $1 που δημιουργήθηκε προηγουμένως. Οι προσαρμοσμένοι λογαριασμοί που έχετε εισαγάγει θα χρειαστεί να είναι $2, και κάθε προσαρμοσμένο token που προσθέσατε στον λογαριασμό θα πρέπει επίσης να $3."
-  },
-  "resetWalletUsingSRPSocial": {
-    "message": "Αφού επαναφέρετε το πορτοφόλι σας με τη Μυστική Φράση Ανάκτησης, θα δείτε μια νέα λίστα λογαριασμών. Αυτή η λίστα θα περιλαμβάνει λογαριασμούς που έχουν υπόλοιπο. Μπορείτε να $1 είχατε δημιουργήσει στο παρελθόν. Ωστόσο, θα χρειαστεί να προσθέσετε ξανά οποιουσδήποτε $2 και $3 που είχατε εισαγάγει.  "
-  },
-  "resetWalletUsingSRPSocialAccounts": {
-    "message": "προσθέσετε ξανά οποιουσδήποτε άλλους λογαριασμούς"
-  },
-  "resetWalletUsingSRPSocialCustomAccounts": {
-    "message": "προσαρμοσμένους λογαριασμούς"
-  },
-  "resetWalletUsingSRPSocialCustomTokens": {
-    "message": "προσαρμοσμένα token"
-  },
-  "resetWalletWarning": {
-    "message": "Βεβαιωθείτε ότι χρησιμοποιείτε τη σωστή Μυστική Φράση Ανάκτησης πριν συνεχίσετε. Αυτή η ενέργεια είναι μη αναστρέψιμη."
-  },
-  "resetWalletWarningSocial": {
-    "message": "Βεβαιωθείτε ότι χρησιμοποιείτε τη σωστή Μυστική Φράση Ανάκτησης πριν κάνετε επαναφορά. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί."
   },
   "resolutionProtocol": {
     "message": "Η διεύθυνση επιλύθηκε μέσω $1",
