--- a/app/_locales/ja/messages.json
+++ b/app/_locales/ja/messages.json
@@ -2559,11 +2559,12 @@
     "message": "パスワードをお忘れですか？"
   },
   "forgotPasswordSocialDescription": {
-    "message": "MetaMask側ではパスワードを復元できません。"
+    "message": "MetaMask側ではパスワードを復元できません。",
+    "description": "$1 is the support link"
   },
   "forgotPasswordSocialStep1": {
     "message": "$1（Face IDなど）が搭載されたデバイスでMetaMaskにログインしている場合は、そこでパスワードをリセットできます。",
-    "description": "$1 is bold biometrics turned on"
+    "description": "$1 is bold heading"
   },
   "forgotPasswordSocialStep1Biometrics": {
     "message": "生体認証 (Face IDなど) が有効な"
@@ -4920,12 +4921,6 @@
   "rateIncludesMMFee": {
     "message": "$1%のMM手数料込み。"
   },
-  "reAddAccounts": {
-    "message": "他のアカウントを再追加"
-  },
-  "reAdded": {
-    "message": "再追加済み"
-  },
   "readdToken": {
     "message": "アカウントオプションメニューで「トークンのインポート」を選択することによって、今後このトークンを戻すことができます。"
   },
@@ -5082,33 +5077,6 @@
   },
   "resetWallet": {
     "message": "ウォレットをリセットする"
-  },
-  "resetWalletSubHeader": {
-    "message": "MetaMask側では、ユーザーのパスワードのコピーを保存していません。アカウントのロックを解除できない場合は、ウォレットをリセットする必要があります。ウォレットをセットアップする際に使用した秘密のリカバリーフレーズを入力することでリセットできます。"
-  },
-  "resetWalletSubHeaderSocial": {
-    "message": "MetaMaskはパスワードのコピーを保存しません。アカウントのロック解除で問題が発生している場合は、ウォレットをリセットする必要があります。シークレットリカバリーフレーズをお持ちの場合は、それを使用してこのデバイスから現在のウォレットとアカウントリストを削除できます。"
-  },
-  "resetWalletUsingSRP": {
-    "message": "この操作により、このデバイスから現在のウォレットと秘密のリカバリーフレーズだけでなく、これまで収集したアカウントのリストも削除されます。秘密のリカバリーフレーズでリセットした後、リセットに使用した秘密のリカバリーフレーズに基づくアカウントのリストが表示されます。この新規リストには、残高のあるアカウントが自動的に含まれます。また、過去に作成された$1することもできます。インポートしたカスタムアカウントは$2する必要があり、アカウントに追加したカスタムトークンも$3する必要があります。"
-  },
-  "resetWalletUsingSRPSocial": {
-    "message": "シークレットリカバリーフレーズを使ってリセットを行うと、新しいアカウントリストが表示されます。このリストには、残高のあるアカウントが含まれます。以前作成した$1することもできます。ただし、インポートした$2や$3は再度追加する必要があります。"
-  },
-  "resetWalletUsingSRPSocialAccounts": {
-    "message": "他のアカウントを再追加"
-  },
-  "resetWalletUsingSRPSocialCustomAccounts": {
-    "message": "カスタムアカウント"
-  },
-  "resetWalletUsingSRPSocialCustomTokens": {
-    "message": "カスタムトークン"
-  },
-  "resetWalletWarning": {
-    "message": "続行する前に、正しいリカバリーフレーズを使用していることを確認してください。この操作は元に戻せません。"
-  },
-  "resetWalletWarningSocial": {
-    "message": "リセットを行う前に、正しいシークレットリカバリーフレーズを使用していることを確認してください。この操作は元に戻すことができません。"
   },
   "resolutionProtocol": {
     "message": "アドレスは$1を通じて解決されました",
