--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -2559,11 +2559,12 @@
     "message": "Şifrenizi mi unuttunuz?"
   },
   "forgotPasswordSocialDescription": {
-    "message": "MetaMask sizin adınıza şifrenizi kurtaramaz."
+    "message": "MetaMask sizin adınıza şifrenizi kurtaramaz.",
+    "description": "$1 is the support link"
   },
   "forgotPasswordSocialStep1": {
     "message": "Bir cihazda $1 ile (Face ID gibi) MetaMask'te oturum açtıysanız şifrenizi orada sıfırlayabilirsiniz.",
-    "description": "$1 is bold biometrics turned on"
+    "description": "$1 is bold heading"
   },
   "forgotPasswordSocialStep1Biometrics": {
     "message": "Biyometrikler açık (Face ID gibi) ise"
@@ -4920,12 +4921,6 @@
   "rateIncludesMMFee": {
     "message": "%$1 MM ücreti dahildir."
   },
-  "reAddAccounts": {
-    "message": "diğer hesapları yeniden ekle"
-  },
-  "reAdded": {
-    "message": "yeniden eklendi"
-  },
   "readdToken": {
     "message": "Gelecekte bu tokeni hesap seçenekleri menüsünde “Tokeni İçe Aktar”' kısmına giderek tekrar ekleyebilirsiniz."
   },
@@ -5082,33 +5077,6 @@
   },
   "resetWallet": {
     "message": "Cüzdanınızı sıfırlayın"
-  },
-  "resetWalletSubHeader": {
-    "message": "MetaMask, parolanın bir kopyasını tutmaz. Hesabının kilidini açmakta sorun yaşıyorsan cüzdanını sıfırlaman gerekecektir. Bunu, cüzdanını kurarken kullandığın Gizli Kurtarma İfadesini girerek yapabilirsin."
-  },
-  "resetWalletSubHeaderSocial": {
-    "message": "MetaMask, şifrenizin bir kopyasını saklamaz. Hesabınızın kilidini açma konusunda sorun yaşıyorsanız cüzdanınızı sıfırlamanız gerekir. Gizli Kurtarma İfadeniz varsa mevcut cüzdanınızı hesap listenizle birlikte bu cihazdan silmek için onu kullanabilirsiniz."
-  },
-  "resetWalletUsingSRP": {
-    "message": "Bu eylem, düzenlediğin hesapların listesiyle birlikte mevcut cüzdanını ve Gizli Kurtarma İfadeni bu cihazdan siler. Bir Gizli Kurtarma İfadesi ile sıfırlama yaptıktan sonra sıfırlamak için kullandığın Gizli Kurtarma İfadesine dayalı bir hesap listesi göreceksin. Bu yeni liste otomatik olarak bakiyesi olan hesapları içerecektir. Ayrıca daha önce oluşturulmuş $1 hesabını oluşturabileceksin. İçe aktardığın özel hesapların $2 olması ve bir hesaba eklediğin özel token'ların da $3 olması gerekir."
-  },
-  "resetWalletUsingSRPSocial": {
-    "message": "Bir Gizli Kurtarma İfadesi ile sıfırlama gerçekleştirdikten sonra yeni bir hesap listesi göreceksiniz. Bu liste, bakiyesi bulunan hesapları içerecektir. Daha önce yaptığınız gibi $1 işlemi gerçekleştirebilirsiniz. Ancak içe aktardığınız tüm $2 ve $3 geri eklenmelidir. "
-  },
-  "resetWalletUsingSRPSocialAccounts": {
-    "message": "tüm diğer hesapları geri ekle"
-  },
-  "resetWalletUsingSRPSocialCustomAccounts": {
-    "message": "özel hesaplar"
-  },
-  "resetWalletUsingSRPSocialCustomTokens": {
-    "message": "özel token'lar"
-  },
-  "resetWalletWarning": {
-    "message": "Devam etmeden önce doğru Gizli Kurtarma İfadesini kullandığından emin ol. Bu işlemi geri alamazsın."
-  },
-  "resetWalletWarningSocial": {
-    "message": "Sıfırlamadan önce doğru Gizli Kurtarma İfadesini kullandığınızdan emin olun. Bu işlem geri alınamaz."
   },
   "resolutionProtocol": {
     "message": "$1 ile adres çözümlendi",
