--- a/app/_locales/ko/messages.json
+++ b/app/_locales/ko/messages.json
@@ -2559,11 +2559,12 @@
     "message": "비밀번호를 잊으셨나요?"
   },
   "forgotPasswordSocialDescription": {
-    "message": "MetaMask는 비밀번호를 복구할 수 없습니다."
+    "message": "MetaMask는 비밀번호를 복구할 수 없습니다.",
+    "description": "$1 is the support link"
   },
   "forgotPasswordSocialStep1": {
     "message": "$1(예: Face ID) 기능이 활성화된 장치에서 MetaMask에 로그인되어 있다면, 해당 장치에서 비밀번호를 초기화할 수 있습니다.",
-    "description": "$1 is bold biometrics turned on"
+    "description": "$1 is bold heading"
   },
   "forgotPasswordSocialStep1Biometrics": {
     "message": "MetaMask에 로그인되어 있다면,"
@@ -4920,12 +4921,6 @@
   "rateIncludesMMFee": {
     "message": "$1% MM 수수료 포함."
   },
-  "reAddAccounts": {
-    "message": "다른 계정을 다시 추가"
-  },
-  "reAdded": {
-    "message": "다시 추가 완료"
-  },
   "readdToken": {
     "message": "나중에 계정 옵션 메뉴의 '토큰 추가'로 이동하면 이 토큰을 다시 추가할 수 있습니다."
   },
@@ -5082,33 +5077,6 @@
   },
   "resetWallet": {
     "message": "지갑 초기화"
-  },
-  "resetWalletSubHeader": {
-    "message": "메타마스크는 사용자의 비밀번호를 저장하지 않습니다. 계정 잠금을 해제하는 데 문제가 있는 경우 지갑 설정 시 사용한 비밀 복구 구문을 이용하여 지갑을 초기화해야 합니다."
-  },
-  "resetWalletSubHeaderSocial": {
-    "message": "MetaMask는 회원님의 비밀번호 사본을 보관하지 않습니다. 계정 잠금을 해제하는 데 문제가 있는 경우 지갑을 초기화해야 합니다. 비밀복구구문이 있으면 이 장치에서 현재 지갑과 계정 목록을 지울 수 있습니다."
-  },
-  "resetWalletUsingSRP": {
-    "message": "이 작업을 하면 정리해둔 계정 목록과 함께 현재 지갑과 비밀 복구 구문이 이 기기에서 삭제됩니다. 비밀 복구 구문으로 초기화하면 그 비밀 복구 구문과 연관된 계정 목록이 표시됩니다. 새 목록에는 잔액이 남아있는 계정이 자동으로 나타납니다. 이전에 생성한 $1도 가능합니다. 가져온 사용자 지정 계정은 $2이어야 하며 계정에 추가한 사용자 지정 토큰도 $3이어야 합니다."
-  },
-  "resetWalletUsingSRPSocial": {
-    "message": "비밀복구구문으로 초기화하면 새로운 계정 목록이 표시됩니다. 이 목록에는 잔액이 있는 계정이 포함됩니다. 이전에 만든 $1을(를) 다시 추가할 수 있습니다. 가져온 $2 및 $3의 경우 다시 추가해야 합니다. "
-  },
-  "resetWalletUsingSRPSocialAccounts": {
-    "message": "다른 계정을 다시 추가"
-  },
-  "resetWalletUsingSRPSocialCustomAccounts": {
-    "message": "사용자 정의 계정"
-  },
-  "resetWalletUsingSRPSocialCustomTokens": {
-    "message": "사용자 정의 토큰"
-  },
-  "resetWalletWarning": {
-    "message": "계속하기 전에 비밀복구구문이 정확한지 확인하세요. 이 작업은 취소할 수 없습니다."
-  },
-  "resetWalletWarningSocial": {
-    "message": "초기화하기 전에 올바른 비밀복구구문을 사용하고 있는지 확인하세요. 초기화하면 되돌릴 수 없습니다."
   },
   "resolutionProtocol": {
     "message": "$1을(를) 통해 주소 확인됨",
