fix: changes the logic for destination acct modal open (#38453)
## **Description**

When bridging to a non-EVM chain (like Bitcoin or Solana) without a
matching account type, the destination account picker modal opens
automatically. However, users were unable to close the modal without
selecting an account first - clicking the close button did nothing.

This happened because the modal had redundant forced-open logic:
`isOpen={isOpen || (isToOrFromNonEvm && !selectedAccount)}`. The OR
condition prevented the modal from closing even when `isOpen` was set to
false.

The fix:
1. Removes this forced-open condition from the modal component. The
auto-open behavior is already handled by the `useDestinationAccount`
hook.
2. Adds logic to the main action button so that if a user closes the
modal without selecting an account, they can click the "Select
Destination Account" button to re-open it.
3. Reorders the button label logic to prioritize user input prompts
(amount, destination account) before quote-related states (loading,
expired, no quotes). This ensures the button always shows actionable
guidance rather than appearing blank when a destination account is
needed but no quotes have been fetched yet.

[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/38453?quickstart=1)

## **Changelog**

CHANGELOG entry: Fixed an issue where the destination account picker
modal could not be closed when bridging to non-EVM chains

## **Related issues**

Fixes: https://github.com/MetaMask/metamask-extension/issues/38125

## **Manual testing steps**

1. Remove any Bitcoin or Solana accounts from your wallet (or use a
fresh wallet with only EVM accounts)

2. Go to the Bridge page

3. Select Bitcoin or Solana as the destination chain

4. The destination account picker modal should open automatically

5. Click the X button or click outside the modal to close it

6. Verify the modal closes successfully

7. Verify the m

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -977,9 +977,6 @@
   "bridgeEnterAmount": {
     "message": "Select amount"
   },
-  "bridgeEnterAmountAndSelectAccount": {
-    "message": "Enter amount and select destination account"
-  },
   "bridgeExplorerLinkViewOn": {
     "message": "View on $1"
   },
@@ -1043,7 +1040,7 @@
     "message": "Your quote timed out."
   },
   "bridgeSelectDestinationAccount": {
-    "message": "Select destination account"
+    "message": "Select a destination account"
   },
   "bridgeSelectDifferentQuote": {
     "message": "Please select a different quote."
